# rossby

./: CHANGELOG.md  Cargo.toml  PUBLISHING.md  README.md
.github/workflows/: ci.yml  publish.yml  release.yml
src/: config.rs  data_loader.rs
src/handlers/: data.rs  image.rs
tests/: integration_test.rs
tests/common/: http_client.rs  image_utils.rs  test_data.rs
