[package]
name = "rossby"
version = "0.0.2"
edition = "2021"
authors = ["rossby contributors"]
description = "A blazingly fast, in-memory, NetCDF-to-API server"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mountain/rossby"
documentation = "https://docs.rs/rossby"
readme = "README.md"
keywords = ["netcdf", "api", "server", "scientific-data", "visualization"]
categories = ["science", "web-programming::http-server"]
exclude = [
    "tests/fixtures/*",
    ".github/*",
    "doc/*",
    "hooks/*",
    "install-hooks.sh"
]

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# NetCDF and data handling
netcdf = { version = "0.12", features = ["static"], optional = true }
ndarray = "0.17"

# CLI and configuration
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image generation
image = "0.25"
colorgrad = "0.8"

# Error handling and utilities
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Additional utilities
once_cell = "1"
parking_lot = "0.12"
uuid = { version = "1.21", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.11.1"
futures = "0.3"

# Apache Arrow for data serialization
arrow = "58.0.0"
arrow-array = "58.0.0"
arrow-ipc = "58.0.0"

[dev-dependencies]
# Testing
criterion = { version = "0.8", features = ["html_reports"] }
reqwest = { version = "0.13", features = ["json"] }
tempfile = "3"
pretty_assertions = "1"

[features]
default = ["netcdf"]
netcdf = ["dep:netcdf"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
